[gd_scene load_steps=5 format=2]

[ext_resource path="res://img/Square.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=2]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8.04575 )

[sub_resource type="CircleShape2D" id=2]
radius = 50.0178

[node name="Enemy" type="Sprite"]
modulate = Color( 0.635294, 0.976471, 0.0235294, 1 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Hitbox" type="Area2D" parent="." groups=[
"Player_damager",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="Timer_stun" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="mytween" type="Tween" parent="."]

[node name="Radarzone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Radarzone"]
modulate = Color( 1, 1, 1, 0.286275 )
rotation = 1.5708
shape = SubResource( 2 )
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="Timer_stun" to="." method="_on_Timer_stun_timeout"]
[connection signal="area_entered" from="Radarzone" to="." method="_on_Radarzone_area_entered"]
[connection signal="area_exited" from="Radarzone" to="." method="_on_Radarzone_area_exited"]
